# yao_ernie

./: .cursorrules  .eslintrc.cjs  .gitignore  .prettierrc.cjs  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  build.sh  cleanup.bat  index.html  install_dependencies.bat  package-lock.json  package.json  publish_build.bat  settings.json.template  start.bat  start.sh  tailwind.config.cjs  test_flows_list.py  test_publish.bat  test_sse.html  tsconfig.json  vite.config.ts
YaoScope/: .gitignore  Cargo.toml  DEPLOY_GUIDE.md  QUICK_BUILD.md  README_BUILD.md  build_dist.bat  build_exe.bat  build_exe.spec  check_agentscope.py  requirements.txt  run_tests.bat  start.bat  test_build.bat  test_dist.bat  test_document_continue.bat  test_document_continue.py  test_ocr_llm_tools.py
YaoScope/examples/: ace_vl_final_test.py  planscope_pdf_test.py  test_scroll_and_summarize.py  text_expansion_test.py
YaoScope/launcher/: Cargo.toml
YaoScope/launcher/src/: main.rs
YaoScope/planscope/: README.md  __init__.py  planscope.py  requirements.txt
YaoScope/service/: __init__.py  config.py  main.py
YaoScope/test_data/: 国庆作文.txt
config/: README.md  settings.json.template
models/: .gitkeep
public/: screenshot.html
src/: index.css  main.tsx  screenshot.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main-capability.json  screenshot-capability.json
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  main.rs.backup  screenshot.rs  system.rs  system_api.rs  tray.rs  window.rs
src-tauri/src/agentic/: agent_manager.rs  http_client.rs  mod.rs
src/i18n/: en.json  zh-CN.json
src/ui/: App.tsx  ChatBubble.tsx  Dropdown.tsx  ErrorBoundary.tsx  FullScreenScreenshot.tsx  (+10 more)
(+61 files in other folders)
