[package]
name = "yao"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ico = "0.3"
image = "0.24"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "webview-data-url"] }
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1"
base64 = "0.22"
enigo = "0.2"
xcap = "0.0.12"
image = "0.25"
urlencoding = "2.1"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
# PyO3 removed - using HTTP API instead
winapi = { version = "0.3", features = ["winuser", "wingdi", "psapi", "tlhelp32", "handleapi", "processthreadsapi"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"


