[package]
name = "yaoscope-launcher"
version = "1.0.0"
edition = "2021"
authors = ["YaoScope Team"]

[[bin]]
name = "YaoScope"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
